자동 조준 제거 및 PC 모바일 에임 개선

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clean": "^4.0.2",
     "phaser": "^3.70.0"
   },
   "devDependencies": {
