--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,18 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Validate frontend env
+        env:
+          VITE_PVP_SERVER_URL: ${{ vars.VITE_PVP_SERVER_URL }}
+          VITE_GOOGLE_CLIENT_ID: ${{ vars.VITE_GOOGLE_CLIENT_ID }}
+        run: |
+          test -n "$VITE_PVP_SERVER_URL" || (echo "Missing repo variable: VITE_PVP_SERVER_URL" && exit 1)
+          test -n "$VITE_GOOGLE_CLIENT_ID" || (echo "Missing repo variable: VITE_GOOGLE_CLIENT_ID" && exit 1)
+
       - name: Build
+        env:
+          VITE_PVP_SERVER_URL: ${{ vars.VITE_PVP_SERVER_URL }}
+          VITE_GOOGLE_CLIENT_ID: ${{ vars.VITE_GOOGLE_CLIENT_ID }}
         run: npm run build
 
       - name: Upload artifact
