--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ JWT_SECRET=replace_with_long_random_secret
 GOOGLE_CLIENT_ID=YOUR_GOOGLE_WEB_CLIENT_ID
 VITE_PVP_SERVER_URL=http://localhost:8788
 VITE_GOOGLE_CLIENT_ID=YOUR_GOOGLE_WEB_CLIENT_ID
-CLIENT_ORIGIN=http://localhost:5173
+CLIENT_ORIGIN=http://localhost:5173,https://igkrap.github.io
 APP_DB_PATH=server/app.sqlite
 PVP_DB_PATH=server/pvp.sqlite
